Fix font imports + dev builds

--- a/extension-manifest-v2/app/scss/android/_dots_menu.scss
+++ b/extension-manifest-v2/app/scss/android/_dots_menu.scss
@@ -19,7 +19,7 @@
 	text-align: right;
 
 	.DotsMenu__button {
-		background-image: url(../../app/images/panel-android/kebab-menu-black.svg);
+		background-image: url(/app/images/panel-android/kebab-menu-black.svg);
 		background-size: 4px 16px;
 		background-position: center;
 		background-repeat: no-repeat;
