--- a/extension-manifest-v2/app/scss/android/_mixins.scss
+++ b/extension-manifest-v2/app/scss/android/_mixins.scss
@@ -31,7 +31,7 @@
 		top: 7px;
 		left: 7px;
 		&::before {
-			content: url('../../app/images/panel/search.svg');
+			content: url('/app/images/panel/search.svg');
 		}
 	}
 	input {
