--- a/extension-manifest-v2/app/scss/android/_settings.scss
+++ b/extension-manifest-v2/app/scss/android/_settings.scss
@@ -72,7 +72,7 @@
 
 			.s-site-x-container {
 				@extend %pointer;
-				background: url('../../app/images/panel/icon-trust-restrict-x.svg') no-repeat center center;
+				background: url('/app/images/panel/icon-trust-restrict-x.svg') no-repeat center center;
 				background-size: 12px 12px;
 				height: 32px;
 				width: 32px;
