--- a/extension-manifest-v2/app/scss/partials/_account.scss
+++ b/extension-manifest-v2/app/scss/partials/_account.scss
@@ -183,7 +183,7 @@ p.warning {
 	}
 	.premium-sparkles-icon {
 		margin-bottom: 16px;
-		background: url('../../app/images/panel/premium-sparkles-icon.svg') no-repeat center center;
+		background: url('/app/images/panel/premium-sparkles-icon.svg') no-repeat center center;
 		height: 29px;
 	}
 	.signin-premium-benefits {
