--- a/extension-manifest-v2/app/scss/partials/_stats.scss
+++ b/extension-manifest-v2/app/scss/partials/_stats.scss
@@ -176,7 +176,7 @@
 					color: #00aef0;
 				}
 				&.locked > .tile-value-content {
-					background-image: url('../../app/images/panel/stats-locked.svg');
+					background-image: url('/app/images/panel/stats-locked.svg');
 					background-repeat: no-repeat;
 					background-position: center;
 					padding-top: 37px;
