--- a/extension-manifest-v2/app/scss/partials/_blocking_header.scss
+++ b/extension-manifest-v2/app/scss/partials/_blocking_header.scss
@@ -42,7 +42,7 @@
 		height: 18px;
 	}
 	.gear-icon {
-		background: url('../../app/images/panel/gear-icon.svg') 0 0 no-repeat;
+		background: url('/app/images/panel/gear-icon.svg') 0 0 no-repeat;
 		display: inline-block;
 		height: 16px;
 		width: 20px;
@@ -70,7 +70,7 @@
 		display: inline-block;
 		width: 20px;
 		height: 10px;
-		background: url("../../app/images/panel/caret-down.svg") no-repeat center;
+		background: url("/app/images/panel/caret-down.svg") no-repeat center;
 		background-size: 45% auto;
 	}
 }
@@ -92,7 +92,7 @@
 		top: 7px;
 		left: 7px;
 		&::before {
-			content: url('../../app/images/panel/search.svg');
+			content: url('/app/images/panel/search.svg');
 		}
 	}
 	input {
