--- a/extension-manifest-v2/app/scss/partials/_detail.scss
+++ b/extension-manifest-v2/app/scss/partials/_detail.scss
@@ -94,17 +94,17 @@
 	background-position: center;
 	background-size: 3px 20px;
 	background-repeat: no-repeat;
-	background-image: url('../../app/images/panel/line.svg');
+	background-image: url('/app/images/panel/line.svg');
 	&:hover {
 		background-position: calc(50% - 2px);
 		background-color: $ghosty-blue;
 		background-size: 7px 20px;
-		background-image: url('../../app/images/panel/caret-left.svg');
+		background-image: url('/app/images/panel/caret-left.svg');
 	}
 	&.condensed:hover {
 		background-position: calc(50% - 1px);
 		background-position: center;
-		background-image: url('../../app/images/panel/caret-right.svg');
+		background-image: url('/app/images/panel/caret-right.svg');
 	}
 }
 
