--- a/extension-manifest-v2/app/scss/partials/_fonts.scss
+++ b/extension-manifest-v2/app/scss/partials/_fonts.scss
@@ -19,7 +19,7 @@
 	font-family: 'Open Sans';
 	font-style: normal;
 	font-weight: 300;
-	src: local('Open Sans Light'), local('OpenSans-Light'), url(../fonts/opensans-light-cyrillic-ext.woff2) format('woff2');
+	src: local('Open Sans Light'), local('OpenSans-Light'), url(/app/fonts/opensans-light-cyrillic-ext.woff2) format('woff2');
 	unicode-range: U+0460-052F, U+20B4, U+2DE0-2DFF, U+A640-A69F;
 }
 /* cyrillic */
@@ -27,7 +27,7 @@
 	font-family: 'Open Sans';
 	font-style: normal;
 	font-weight: 300;
-	src: local('Open Sans Light'), local('OpenSans-Light'), url(../fonts/opensans-light-cyrillic.woff2) format('woff2');
+	src: local('Open Sans Light'), local('OpenSans-Light'), url(/app/fonts/opensans-light-cyrillic.woff2) format('woff2');
 	unicode-range: U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
 }
 /* greek-ext */
@@ -35,7 +35,7 @@
 	font-family: 'Open Sans';
 	font-style: normal;
 	font-weight: 300;
-	src: local('Open Sans Light'), local('OpenSans-Light'), url(../fonts/opensans-light-greek-ext.woff2) format('woff2');
+	src: local('Open Sans Light'), local('OpenSans-Light'), url(/app/fonts/opensans-light-greek-ext.woff2) format('woff2');
 	unicode-range: U+1F00-1FFF;
 }
 /* greek */
@@ -43,7 +43,7 @@
 	font-family: 'Open Sans';
 	font-style: normal;
 	font-weight: 300;
-	src: local('Open Sans Light'), local('OpenSans-Light'), url(../fonts/opensans-light-greek.woff2) format('woff2');
+	src: local('Open Sans Light'), local('OpenSans-Light'), url(/app/fonts/opensans-light-greek.woff2) format('woff2');
 	unicode-range: U+0370-03FF;
 }
 /* vietnamese */
@@ -51,7 +51,7 @@
 	font-family: 'Open Sans';
 	font-style: normal;
 	font-weight: 300;
-	src: local('Open Sans Light'), local('OpenSans-Light'), url(../fonts/opensans-light-vietnamese.woff2) format('woff2');
+	src: local('Open Sans Light'), local('OpenSans-Light'), url(/app/fonts/opensans-light-vietnamese.woff2) format('woff2');
 	unicode-range: U+0102-0103, U+1EA0-1EF9, U+20AB;
 }
 /* latin-ext */
@@ -59,7 +59,7 @@
 	font-family: 'Open Sans';
 	font-style: normal;
 	font-weight: 300;
-	src: local('Open Sans Light'), local('OpenSans-Light'), url(../fonts/opensans-light-latin-ext.woff2) format('woff2');
+	src: local('Open Sans Light'), local('OpenSans-Light'), url(/app/fonts/opensans-light-latin-ext.woff2) format('woff2');
 	unicode-range: U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
 }
 /* latin */
@@ -67,7 +67,7 @@
 	font-family: 'Open Sans';
 	font-style: normal;
 	font-weight: 300;
-	src: local('Open Sans Light'), local('OpenSans-Light'), url(../fonts/opensans-light-latin.woff2) format('woff2');
+	src: local('Open Sans Light'), local('OpenSans-Light'), url(/app/fonts/opensans-light-latin.woff2) format('woff2');
 	unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
 }
 /* cyrillic-ext */
@@ -75,7 +75,7 @@
 	font-family: 'Open Sans';
 	font-style: normal;
 	font-weight: 400;
-	src: local('Open Sans'), local('OpenSans'), url(../fonts/opensans-normal-cyrillic-ext.woff2) format('woff2');
+	src: local('Open Sans'), local('OpenSans'), url(/app/fonts/opensans-normal-cyrillic-ext.woff2) format('woff2');
 	unicode-range: U+0460-052F, U+20B4, U+2DE0-2DFF, U+A640-A69F;
 }
 /* cyrillic */
@@ -83,7 +83,7 @@
 	font-family: 'Open Sans';
 	font-style: normal;
 	font-weight: 400;
-	src: local('Open Sans'), local('OpenSans'), url(../fonts/opensans-normal-cyrillic.woff2) format('woff2');
+	src: local('Open Sans'), local('OpenSans'), url(/app/fonts/opensans-normal-cyrillic.woff2) format('woff2');
 	unicode-range: U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
 }
 /* greek-ext */
@@ -91,7 +91,7 @@
 	font-family: 'Open Sans';
 	font-style: normal;
 	font-weight: 400;
-	src: local('Open Sans'), local('OpenSans'), url(../fonts/opensans-normal-greek-ext.woff2) format('woff2');
+	src: local('Open Sans'), local('OpenSans'), url(/app/fonts/opensans-normal-greek-ext.woff2) format('woff2');
 	unicode-range: U+1F00-1FFF;
 }
 /* greek */
@@ -99,7 +99,7 @@
 	font-family: 'Open Sans';
 	font-style: normal;
 	font-weight: 400;
-	src: local('Open Sans'), local('OpenSans'), url(../fonts/opensans-normal-greek.woff2) format('woff2');
+	src: local('Open Sans'), local('OpenSans'), url(/app/fonts/opensans-normal-greek.woff2) format('woff2');
 	unicode-range: U+0370-03FF;
 }
 /* vietnamese */
@@ -107,7 +107,7 @@
 	font-family: 'Open Sans';
 	font-style: normal;
 	font-weight: 400;
-	src: local('Open Sans'), local('OpenSans'), url(../fonts/opensans-normal-vietnamese.woff2) format('woff2');
+	src: local('Open Sans'), local('OpenSans'), url(/app/fonts/opensans-normal-vietnamese.woff2) format('woff2');
 	unicode-range: U+0102-0103, U+1EA0-1EF9, U+20AB;
 }
 /* latin-ext */
@@ -115,7 +115,7 @@
 	font-family: 'Open Sans';
 	font-style: normal;
 	font-weight: 400;
-	src: local('Open Sans'), local('OpenSans'), url(../fonts/opensans-normal-latin-ext.woff2) format('woff2');
+	src: local('Open Sans'), local('OpenSans'), url(/app/fonts/opensans-normal-latin-ext.woff2) format('woff2');
 	unicode-range: U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
 }
 /* latin */
@@ -123,7 +123,7 @@
 	font-family: 'Open Sans';
 	font-style: normal;
 	font-weight: 400;
-	src: local('Open Sans'), local('OpenSans'), url(../fonts/opensans-normal-latin.woff2) format('woff2');
+	src: local('Open Sans'), local('OpenSans'), url(/app/fonts/opensans-normal-latin.woff2) format('woff2');
 	unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
 }
 /* cyrillic-ext */
@@ -131,7 +131,7 @@
 	font-family: 'Open Sans';
 	font-style: normal;
 	font-weight: 600;
-	src: local('Open Sans Semibold'), local('OpenSans-Semibold'), url(../fonts/opensans-semibold-cyrillic-ext.woff2) format('woff2');
+	src: local('Open Sans Semibold'), local('OpenSans-Semibold'), url(/app/fonts/opensans-semibold-cyrillic-ext.woff2) format('woff2');
 	unicode-range: U+0460-052F, U+20B4, U+2DE0-2DFF, U+A640-A69F;
 }
 /* cyrillic */
@@ -139,7 +139,7 @@
 	font-family: 'Open Sans';
 	font-style: normal;
 	font-weight: 600;
-	src: local('Open Sans Semibold'), local('OpenSans-Semibold'), url(../fonts/opensans-semibold-cyrillic.woff2) format('woff2');
+	src: local('Open Sans Semibold'), local('OpenSans-Semibold'), url(/app/fonts/opensans-semibold-cyrillic.woff2) format('woff2');
 	unicode-range: U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
 }
 /* greek-ext */
@@ -147,7 +147,7 @@
 	font-family: 'Open Sans';
 	font-style: normal;
 	font-weight: 600;
-	src: local('Open Sans Semibold'), local('OpenSans-Semibold'), url(../fonts/opensans-semibold-greek-ext.woff2) format('woff2');
+	src: local('Open Sans Semibold'), local('OpenSans-Semibold'), url(/app/fonts/opensans-semibold-greek-ext.woff2) format('woff2');
 	unicode-range: U+1F00-1FFF;
 }
 /* greek */
@@ -155,7 +155,7 @@
 	font-family: 'Open Sans';
 	font-style: normal;
 	font-weight: 600;
-	src: local('Open Sans Semibold'), local('OpenSans-Semibold'), url(../fonts/opensans-semibold-greek.woff2) format('woff2');
+	src: local('Open Sans Semibold'), local('OpenSans-Semibold'), url(/app/fonts/opensans-semibold-greek.woff2) format('woff2');
 	unicode-range: U+0370-03FF;
 }
 /* vietnamese */
@@ -163,7 +163,7 @@
 	font-family: 'Open Sans';
 	font-style: normal;
 	font-weight: 600;
-	src: local('Open Sans Semibold'), local('OpenSans-Semibold'), url(../fonts/opensans-semibold-vietnamese.woff2) format('woff2');
+	src: local('Open Sans Semibold'), local('OpenSans-Semibold'), url(/app/fonts/opensans-semibold-vietnamese.woff2) format('woff2');
 	unicode-range: U+0102-0103, U+1EA0-1EF9, U+20AB;
 }
 /* latin-ext */
@@ -171,7 +171,7 @@
 	font-family: 'Open Sans';
 	font-style: normal;
 	font-weight: 600;
-	src: local('Open Sans Semibold'), local('OpenSans-Semibold'), url(../fonts/opensans-semibold-latin-ext.woff2) format('woff2');
+	src: local('Open Sans Semibold'), local('OpenSans-Semibold'), url(/app/fonts/opensans-semibold-latin-ext.woff2) format('woff2');
 	unicode-range: U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
 }
 /* latin */
@@ -179,7 +179,7 @@
 	font-family: 'Open Sans';
 	font-style: normal;
 	font-weight: 600;
-	src: local('Open Sans Semibold'), local('OpenSans-Semibold'), url(../fonts/opensans-semibold-latin.woff2) format('woff2');
+	src: local('Open Sans Semibold'), local('OpenSans-Semibold'), url(/app/fonts/opensans-semibold-latin.woff2) format('woff2');
 	unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
 }
 /* latin */
@@ -187,7 +187,7 @@
 	font-family: 'Open Sans';
 	font-style: normal;
 	font-weight: 700;
-	src: local('Open Sans Bold'), local('OpenSans-Bold'), url(../fonts/open-sans-latin-bold-700.woff2) format('woff2');
+	src: local('Open Sans Bold'), local('OpenSans-Bold'), url(/app/fonts/open-sans-latin-bold-700.woff2) format('woff2');
 	unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
 }
 /* roboto-300 - latin */
@@ -195,40 +195,40 @@
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 300;
-  src: local('Roboto Light'), local('Roboto-Light'), url('../fonts/roboto-latin-bold-300.woff2') format('woff2'),
+  src: local('Roboto Light'), local('Roboto-Light'), url('/app/fonts/roboto-latin-bold-300.woff2') format('woff2'),
 }
 /* roboto-regular - latin */
 @font-face {
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 400;
-  src: local('Roboto'), local('Roboto-Regular'), url('../fonts/roboto-all-charsets.woff2') format('woff2'),
+  src: local('Roboto'), local('Roboto-Regular'), url('/app/fonts/roboto-all-charsets.woff2') format('woff2'),
 }
 /* roboto-500 - latin */
 @font-face {
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 500;
-  src: local('Roboto Medium'), local('Roboto-Medium'), url('../fonts/roboto-latin-bold-500.woff2') format('woff2'),
+  src: local('Roboto Medium'), local('Roboto-Medium'), url('/app/fonts/roboto-latin-bold-500.woff2') format('woff2'),
 }
 /* roboto-700 - latin */
 @font-face {
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 700;
-  src: local('Roboto Bold'), local('Roboto-Bold'), url('../fonts/roboto-latin-bold-700.woff2') format('woff2'),
+  src: local('Roboto Bold'), local('Roboto-Bold'), url('/app/fonts/roboto-latin-bold-700.woff2') format('woff2'),
 }
 /* roboto-900 - latin */
 @font-face {
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 900;
-  src: local('Roboto Black'), local('Roboto-Black'), url('../fonts/roboto-latin-bold-900.woff2') format('woff2'),
+  src: local('Roboto Black'), local('Roboto-Black'), url('/app/fonts/roboto-latin-bold-900.woff2') format('woff2'),
 }
 /* roboto-condensed-700 - latin */
 @font-face {
   font-family: 'Roboto Condensed';
   font-style: normal;
   font-weight: 700;
-  src: local('Roboto Condensed Bold'), local('RobotoCondensed-Bold'), url('../fonts/roboto-condensed-latin-bold-700.woff2') format('woff2'), /* Super Modern Browsers */
+  src: local('Roboto Condensed Bold'), local('RobotoCondensed-Bold'), url('/app/fonts/roboto-condensed-latin-bold-700.woff2') format('woff2'), /* Super Modern Browsers */
 }
