--- a/ui/src/styles/panel.css
+++ b/ui/src/styles/panel.css
@@ -61,6 +61,8 @@ html {
   --ui-font-body-m: 400 14px / 18px var(--ui-font-family);
   --ui-font-body-s: 400 12px / 16px var(--ui-font-family);
 
+  --ui-font-button-s: var(--ui-font-label-s);
+
   /* UI components overwrites */
   --ui-text-color-heading: var(--ui-color-gray-900);
   --ui-text-color-anchor: var(--ui-color-primary-700);
