Settings page - websites

--- a/ui/src/styles/panel.css
+++ b/ui/src/styles/panel.css
@@ -55,7 +55,7 @@ html {
   --ui-font-body-m: 400 14px / 18px var(--ui-font-family);
   --ui-font-body-s: 400 12px / 16px var(--ui-font-family);
 
-  --ui-font-button-s: var(--ui-font-label-s);
+  --ui-font-button-s: 600 14px / 24px var(--ui-font-family);
 
   /* UI components overwrites */
   --ui-text-color-heading: var(--ui-color-gray-900);
@@ -84,15 +84,31 @@ body {
   background: var(--ui-color-white);
 }
 
+@media screen and (max-height: 600px) {
+  body {
+    max-height: 600px;
+    overflow: scroll;
+  }
+}
+
 button,
 label,
 input {
   font-family: inherit !important;
 }
 
-@media screen and (max-height: 600px) {
-  body {
-    max-height: 600px;
-    overflow: scroll;
-  }
+input::-webkit-search-cancel-button {
+  -webkit-appearance: none;
+  height: 16px;
+  width: 16px;
+  cursor: pointer;
+  margin: 0;
+  align-self: center;
+  background-image: url("data:image/svg+xml,%3Csvg width='16' height='16' viewBox='0 0 16 16' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M12 4L4 12M4 4L12 12' stroke='%2349556e' stroke-width='1.5' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E");
+}
+
+ui-button[size='small'] {
+  text-transform: none;
+  border-radius: 8px;
+  --ui-button-color-hover: var(--ui-color-primary-700);
 }
