Update ghostery ui access in mv2

--- a/extension-manifest-v2/app/templates/onboarding.html
+++ b/extension-manifest-v2/app/templates/onboarding.html
@@ -19,7 +19,7 @@
 		<meta name="theme-color" content="#00AEF0" />
 		<title>Welcome to Ghostery</title>
 		<script src="../../dist/onboarding.js" async type="module"></script>
-		<link rel="stylesheet" href="../../dist/css/onboarding_styles.css" />
+		<link rel="stylesheet" href="../../dist/css/onboarding.css" />
 	</head>
 	<body>
 		<gh-onboarding></gh-onboarding>
