--- a/extension-manifest-v2/app/templates/autoconsent.html
+++ b/extension-manifest-v2/app/templates/autoconsent.html
@@ -7,8 +7,8 @@
     />
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type" />
     <meta content="utf-8" http-equiv="encoding" />
-    <script src="../../dist/autoconsent_popup.js" async></script>
-    <link rel="stylesheet" href="../../dist/css/ghostery_ui.css" />
+    <script src="../../dist/autoconsent.js" async></script>
+    <link rel="stylesheet" href="../../dist/css/autoconsent.css" />
   </head>
   <body>
     <gh-autoconsent></gh-autoconsent>
