--- a/extension-manifest-v2/app/templates/trackers-preview.html
+++ b/extension-manifest-v2/app/templates/trackers-preview.html
@@ -8,8 +8,8 @@
     />
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type" />
     <meta content="utf-8" http-equiv="encoding" />
-    <script src="../../dist/trackers_preview_popup.js" async></script>
-    <link rel="stylesheet" href="../../dist/css/ghostery_ui.css" />
+    <script src="../../dist/trackers_preview.js" async></script>
+    <link rel="stylesheet" href="../../dist/css/trackers_preview.css" />
   </head>
   <body>
     <gh-trackers-preview></gh-trackers-preview>
