--- a/ui/src/modules/pages/styles.css
+++ b/ui/src/modules/pages/styles.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: 'Roboto';
-  src: local('Roboto'), url('../fonts/Roboto-Regular.ttf');
+  src: local('Roboto'), url('./assets/Roboto-Regular.ttf');
   font-weight: 400;
   font-style: normal;
   font-display: swap;
@@ -8,7 +8,7 @@
 
 @font-face {
   font-family: 'Roboto';
-  src: local('Roboto'), url('../fonts/Roboto-Medium.ttf');
+  src: local('Roboto'), url('./assets/Roboto-Medium.ttf');
   font-weight: 500;
   font-style: normal;
   font-display: swap;
@@ -16,7 +16,7 @@
 
 @font-face {
   font-family: 'Roboto';
-  src: url('../fonts/Roboto-Medium.ttf');
+  src: url('./assets/Roboto-Medium.ttf');
   font-weight: 700;
   font-style: normal;
   font-display: swap;
@@ -24,7 +24,7 @@
 
 @font-face {
   font-family: 'Roboto Condensed';
-  src: local('Roboto Condensed'), url('../fonts/RobotoCondensed-Regular.ttf');
+  src: local('Roboto Condensed'), url('./assets/RobotoCondensed-Regular.ttf');
   font-weight: 400;
   font-style: normal;
   font-display: swap;
@@ -32,7 +32,7 @@
 
 @font-face {
   font-family: 'Roboto Condensed';
-  src: local('Roboto Condensed'), url('../fonts/RobotoCondensed-Bold.ttf');
+  src: local('Roboto Condensed'), url('./assets/RobotoCondensed-Bold.ttf');
   font-weight: 700;
   font-style: normal;
   font-display: swap;
