--- a/ui/src/modules/panel/styles.css
+++ b/ui/src/modules/panel/styles.css
@@ -78,7 +78,6 @@ body {
 
 body {
   width: 100%;
-  max-width: max(100vw, 375px);
   -webkit-user-select: none;
   user-select: none;
   background: var(--ui-color-white);
@@ -87,7 +86,8 @@ body {
 @media screen and (max-height: 600px) {
   body {
     max-height: 600px;
-    overflow: scroll;
+    overflow-x: hidden;
+    overflow-y: scroll;
   }
 }
 
