Update MV2 integration & UI fixes

--- a/ui/src/modules/pages/styles.css
+++ b/ui/src/modules/pages/styles.css
@@ -58,7 +58,7 @@ html {
 
   --ui-color-newsletter-500: #ac59b5;
 
-  --ui-color-success-700: #008d00;
+  --ui-color-success-700: #13770c;
   --ui-color-success-500: #43ac3c;
   --ui-color-warning-500: #ffbb00;
   --ui-color-error-500: #ff4500;
