--- a/extension-manifest-v3/xcode/Shared (App)/Resources/Style.css
+++ b/extension-manifest-v3/xcode/Shared (App)/Resources/Style.css
@@ -1,3 +1,19 @@
+@font-face {
+  font-family: 'Roboto Condensed';
+  src: local('Roboto Condensed'), url('./RobotoCondensed-Regular.ttf');
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Roboto Condensed';
+  src: local('Roboto Condensed'), url('./RobotoCondensed-Bold.ttf');
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+}
+
 * {
   -webkit-user-select: none;
   -webkit-user-drag: none;
