Update category icons

--- a/extension-manifest-v2/app/scss/partials/_blocking_category.scss
+++ b/extension-manifest-v2/app/scss/partials/_blocking_category.scss
@@ -88,9 +88,27 @@
 	.no-sticky {
 		position: inherit !important;
 	}
-	.cat-image {
+	.cat-image-wrapper {
 		height: 24px;
 		width: 24px;
+		position: relative;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+	}
+	.cat-image-background {
+		padding: 4px;
+		border-radius: 4px;
+		opacity: 0.15;
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 16px;
+		height: 16px;
+	}
+	.cat-image {
+		width: 16px;
+		height: 16px;
 	}
 	.cat-name {
 		cursor: pointer;
