--- a/extension-manifest-v2/app/scss/android/_blocking_tab.scss
+++ b/extension-manifest-v2/app/scss/android/_blocking_tab.scss
@@ -61,10 +61,23 @@
 		cursor: pointer;
 	}
 
-	.BlockingCategory__image {
-		padding: 1px 12px 0 0;
-		width: 47px;
-		height: 43px;
+	.cat-image-wrapper {
+		height: 50px;
+		width: 50px;
+		position: relative;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+	}
+	.cat-image-background {
+		padding: 4px;
+		border-radius: 4px;
+		opacity: 0.15;
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
 	}
 
 	.BlockingCategory__name {
