Selective blocking in panel UI

--- a/packages/ui/src/modules/panel/styles.css
+++ b/packages/ui/src/modules/panel/styles.css
@@ -18,6 +18,7 @@ html {
   /* Variables */
   --ui-color-gray-900: #202c44;
   --ui-color-gray-600: #49556e;
+  --ui-color-gray-500: #6d778e;
   --ui-color-gray-400: #9ba3b4;
   --ui-color-gray-300: #c3cad9;
   --ui-color-gray-200: #dfe3eb;
