--- a/packages/ui/src/modules/panel/styles.css
+++ b/packages/ui/src/modules/panel/styles.css
@@ -17,6 +17,7 @@
 html {
   /* Variables */
   --ui-color-gray-900: #202c44;
+  --ui-color-gray-800: #202c44;
   --ui-color-gray-600: #49556e;
   --ui-color-gray-500: #6d778e;
   --ui-color-gray-400: #9ba3b4;
