--- a/packages/ui/src/modules/panel/styles.css
+++ b/packages/ui/src/modules/panel/styles.css
@@ -34,6 +34,7 @@ html {
 
   --ui-color-success-700: #008d00;
   --ui-color-success-500: #0ab00a;
+  --ui-color-success-100: #ebfaeb;
 
   --ui-color-error-500: #ff4500;
   --ui-color-error-400: #ff5d35;
@@ -114,4 +115,8 @@ ui-button {
   text-transform: none;
   border-radius: 8px;
   --ui-button-color-hover: var(--ui-color-primary-700);
+}
+
+ui-button > * {
+  border-radius: 8px;
 }
