--- a/packages/ui/src/modules/panel/styles.css
+++ b/packages/ui/src/modules/panel/styles.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: 'Inter';
-  src: local('Inter'), url('./assets/Inter-Regular.ttf');
+  src: url('./assets/Inter-Regular.ttf');
   font-weight: 400;
   font-style: normal;
   font-display: swap;
@@ -8,7 +8,7 @@
 
 @font-face {
   font-family: 'Inter';
-  src: local('Inter'), url('./assets/Inter-SemiBold.ttf');
+  src: url('./assets/Inter-SemiBold.ttf');
   font-weight: 600;
   font-style: normal;
   font-display: swap;
@@ -17,7 +17,9 @@
 html {
   /* Variables */
   --ui-color-gray-900: #202c44;
+  --ui-color-gray-800: #202c44;
   --ui-color-gray-600: #49556e;
+  --ui-color-gray-500: #6d778e;
   --ui-color-gray-400: #9ba3b4;
   --ui-color-gray-300: #c3cad9;
   --ui-color-gray-200: #dfe3eb;
@@ -32,6 +34,7 @@ html {
 
   --ui-color-success-700: #008d00;
   --ui-color-success-500: #0ab00a;
+  --ui-color-success-100: #ebfaeb;
 
   --ui-color-error-500: #ff4500;
   --ui-color-error-400: #ff5d35;
@@ -112,4 +115,8 @@ ui-button {
   text-transform: none;
   border-radius: 8px;
   --ui-button-color-hover: var(--ui-color-primary-700);
+}
+
+ui-button > * {
+  border-radius: 8px;
 }
