--- a/packages/ui/src/modules/panel/styles.css
+++ b/packages/ui/src/modules/panel/styles.css
@@ -35,6 +35,9 @@ html {
   --ui-color-success-500: #0ab00a;
   --ui-color-success-100: #ebfaeb;
 
+  --ui-color-warning-500: #ffbb00;
+  --ui-color-warning-100: #fff7e6;
+
   --ui-color-error-500: #ff4500;
   --ui-color-error-400: #ff5d35;
 
