--- a/packages/ui/src/modules/panel/styles.css
+++ b/packages/ui/src/modules/panel/styles.css
@@ -45,6 +45,8 @@ html {
   --ui-color-danger-500: #f13436;
   --ui-color-danger-100: #ffecec;
 
+  --ui-color-backdrop: #1c232c;
+
   --ui-color-inherit: inherit;
 
   --ui-font-family: 'Inter', sans-serif;
@@ -70,6 +72,42 @@ html {
   /* UI components overwrites */
   --ui-text-color-heading: var(--ui-color-gray-800);
   --ui-text-color-anchor: var(--ui-color-primary-700);
+}
+
+@media (prefers-color-scheme: dark) {
+  html {
+    --ui-color-gray-100: #090d12;
+    --ui-color-gray-200: #222a39;
+    --ui-color-gray-300: #565f72;
+    --ui-color-gray-400: #6d778e;
+    --ui-color-gray-500: #9ba3b4;
+    --ui-color-gray-600: #a5aab3;
+    --ui-color-gray-800: #eaeaea;
+    --ui-color-gray-900: #f0f2f7;
+    --ui-color-white: #131b24;
+
+    --ui-color-primary-100: #0c2b48;
+    --ui-color-primary-200: #113b62;
+    --ui-color-primary-300: #144878;
+    --ui-color-primary-500: #4191c6;
+    --ui-color-primary-700: #66b4e8;
+
+    --ui-color-success-100: #056605;
+    --ui-color-success-500: #1b911b;
+    --ui-color-success-700: #ebfaeb;
+
+    --ui-color-warning-100: #fbcf56;
+    --ui-color-warning-500: #ffbb00;
+
+    --ui-color-error-500: #ff4500;
+    --ui-color-error-400: #ff5d35;
+
+    --ui-color-danger-100: #c80f11;
+    --ui-color-danger-500: #f13436;
+    --ui-color-danger-700: #e05c5e;
+
+    --ui-color-backdrop: #1c232c;
+  }
 }
 
 html,
