--- a/packages/ui/src/modules/panel/styles.css
+++ b/packages/ui/src/modules/panel/styles.css
@@ -97,7 +97,7 @@ html {
     --ui-color-success-500: #1b911b;
     --ui-color-success-700: #ebfaeb;
 
-    --ui-color-warning-100: #312913;
+    --ui-color-warning-100: #3c3523;
     --ui-color-warning-500: #ffbb00;
 
     --ui-color-error-500: #ff4500;
