--- a/packages/ui/src/modules/panel/styles.css
+++ b/packages/ui/src/modules/panel/styles.css
@@ -15,10 +15,8 @@
 }
 
 html {
-  --ui-color-gray-900: #020826;
   --ui-color-gray-800: #202c44;
   --ui-color-gray-600: #49556e;
-  --ui-color-gray-500: #6d778e;
   --ui-color-gray-400: #9ba3b4;
   --ui-color-gray-300: #c3cad9;
   --ui-color-gray-200: #dfe3eb;
@@ -45,7 +43,13 @@ html {
   --ui-color-danger-500: #f13436;
   --ui-color-danger-100: #ffecec;
 
+  --ui-color-backdrop: var(--ui-color-gray-800);
+  --ui-color-warning-text: var(--ui-color-gray-800);
+  --ui-color-scroll-shadow: rgba(0, 0, 0, 0.1);
+
   --ui-color-inherit: inherit;
+
+  --ui-shadow-header: 0px 4px 16px rgba(32, 44, 68, 0.1);
 
   --ui-font-family: 'Inter', sans-serif;
   --ui-font-family-label: var(--ui-font-family);
@@ -91,6 +95,9 @@ body {
 }
 
 @media screen and (max-height: 600px) {
+  html {
+    overflow-y: auto;
+  }
   body {
     max-height: 600px;
   }
