Fix pause button hover state

--- a/packages/ui/src/modules/panel/dark.css
+++ b/packages/ui/src/modules/panel/dark.css
@@ -11,7 +11,7 @@
 
     --ui-color-primary-100: #0a1e31;
     --ui-color-primary-200: #00365c;
-    --ui-color-primary-300: #0077cc;
+    --ui-color-primary-300: #004f88;
     --ui-color-primary-500: #00aef0;
     --ui-color-primary-700: #33c7ff;
 
