--- a/extension-manifest-v3/src/ui/styles.css
+++ b/extension-manifest-v3/src/ui/styles.css
@@ -25,12 +25,12 @@
 html {
   --ui-color-layout: white;
 
-  --ui-color-gray-800: #202c44;
-  --ui-color-gray-600: #49556e;
-  --ui-color-gray-400: #9ba3b4;
-  --ui-color-gray-300: #c3cad9;
-  --ui-color-gray-200: #dfe3eb;
-  --ui-color-gray-100: #f0f2f7;
+  --ui-color-gray-800: #2b2f3b;
+  --ui-color-gray-600: #555962;
+  --ui-color-gray-400: #a7a7aa;
+  --ui-color-gray-300: #cdced0;
+  --ui-color-gray-200: #e3e5e8;
+  --ui-color-gray-100: hsl(228, 20%, 96%);
 
   --ui-color-primary-700: #0077cc;
   --ui-color-primary-500: #00aef0;
@@ -43,14 +43,13 @@ html {
   --ui-color-success-100: #ebfaeb;
 
   --ui-color-warning-500: #ffbb00;
-  --ui-color-warning-100: #fff7e6;
-
-  --ui-color-error-500: #ff4500;
-  --ui-color-error-400: #ff5d35;
+  --ui-color-warning-200: #fff7e6;
+  --ui-color-warning-100: #13151a;
 
   --ui-color-danger-700: #c80f11;
   --ui-color-danger-500: #f13436;
-  --ui-color-danger-100: #ffecec;
+  --ui-color-danger-300: #f4a4a7;
+  --ui-color-danger-100: #ffebeb;
 
   --ui-color-backdrop: var(--ui-color-gray-600);
   --ui-color-warning-text: var(--ui-color-gray-800);
@@ -87,39 +86,41 @@ html {
   html {
     --ui-color-layout: #1f2125;
 
-    --ui-color-gray-100: #13151a;
-    --ui-color-gray-200: #2f3136;
-    --ui-color-gray-300: #636468;
-    --ui-color-gray-400: #88898c;
-    --ui-color-gray-600: #b9bbbe;
     --ui-color-gray-800: #f2f4f7;
+    --ui-color-gray-600: #b9bbbe;
+    --ui-color-gray-400: #88898c;
+    --ui-color-gray-300: #636468;
+    --ui-color-gray-200: #2f3136;
+    --ui-color-gray-100: #13151a;
 
-    --ui-color-primary-100: #0a1e31;
-    --ui-color-primary-200: #00365c;
-    --ui-color-primary-300: #004f88;
-    --ui-color-primary-500: #00aef0;
     --ui-color-primary-700: #33c7ff;
+    --ui-color-primary-500: #00aef0;
+    --ui-color-primary-300: #004f88;
+    --ui-color-primary-200: #00365c;
+    --ui-color-primary-100: #0a1e31;
 
-    --ui-color-success-100: #056605;
-    --ui-color-success-500: #1b911b;
     --ui-color-success-700: #36b736;
+    --ui-color-success-500: #1b911b;
+    --ui-color-success-100: #056605;
 
-    --ui-color-warning-100: #3c3523;
     --ui-color-warning-500: #ffbb00;
+    --ui-color-warning-200: #3c3523;
+    --ui-color-warning-100: #13151a;
 
-    --ui-color-error-500: #ff4500;
-    --ui-color-error-400: #ff5d35;
-
-    --ui-color-danger-100: #341b1c;
-    --ui-color-danger-500: #cd393c;
     --ui-color-danger-700: #e05c5e;
+    --ui-color-danger-500: #cd393c;
+    --ui-color-danger-300: #7f3d3d;
+    --ui-color-danger-100: #341b1c;
 
     --ui-color-backdrop: var(--ui-color-gray-100);
-    --ui-color-warning-text: var(--ui-color-gray-100);
     --ui-color-scroll-shadow: rgba(0, 0, 0, 0.4);
 
     --ui-shadow-header: 0px 1px 0px var(--ui-color-gray-200);
   }
+}
+
+html {
+  height: 100%;
 }
 
 html,
