--- a/extension-manifest-v3/src/ui/styles.css
+++ b/extension-manifest-v3/src/ui/styles.css
@@ -30,7 +30,7 @@ html {
   --ui-color-gray-400: #a7a7aa;
   --ui-color-gray-300: #cdced0;
   --ui-color-gray-200: #e3e5e8;
-  --ui-color-gray-100: hsl(228, 20%, 96%);
+  --ui-color-gray-100: #f3f4f7;
 
   --ui-color-primary-700: #0077cc;
   --ui-color-primary-500: #00aef0;
