fix(onboarding): header logo & minor font fixes

--- a/src/ui/styles.css
+++ b/src/ui/styles.css
@@ -25,12 +25,12 @@
 html {
   --ui-color-layout: white;
 
-  --ui-color-gray-800: #2F3136;
+  --ui-color-gray-800: #2f3136;
   --ui-color-gray-600: #636568;
-  --ui-color-gray-400: #88898C;
-  --ui-color-gray-300: #B9BBBE;
-  --ui-color-gray-200: #E0E2E5;
-  --ui-color-gray-100: #F2F4F7;
+  --ui-color-gray-400: #88898c;
+  --ui-color-gray-300: #b9bbbe;
+  --ui-color-gray-200: #e0e2e5;
+  --ui-color-gray-100: #f2f4f7;
 
   --ui-color-primary-700: #0077cc;
   --ui-color-primary-500: #00aef0;
@@ -65,6 +65,7 @@ html {
   --ui-font-display-m: 700 28px / 30px var(--ui-font-family);
   --ui-font-display-s: 700 22px / 24px var(--ui-font-family);
   --ui-font-display-xs: 700 18px / 20px var(--ui-font-family);
+  --ui-font-display-2xs: 700 16px / 18px var(--ui-font-family);
 
   --ui-font-headline-l: 600 30px / 40px var(--ui-font-family);
   --ui-font-headline-m: 600 24px / 32px var(--ui-font-family);
@@ -79,7 +80,7 @@ html {
   --ui-font-body-l: 400 16px / 20px var(--ui-font-family);
   --ui-font-body-m: 400 14px / 18px var(--ui-font-family);
   --ui-font-body-s: 400 12px / 16px var(--ui-font-family);
-  --ui-font-body-xs: 400 11px / 14px var(--ui-font-family);
+  --ui-font-body-xs: 400 11px / 13px var(--ui-font-family);
 }
 
 @media (prefers-color-scheme: dark) {
@@ -90,8 +91,8 @@ html {
     --ui-color-gray-600: #b9bbbe;
     --ui-color-gray-400: #88898c;
     --ui-color-gray-300: #636468;
-    --ui-color-gray-200: #3F4146;
-    --ui-color-gray-100: #17191C;
+    --ui-color-gray-200: #3f4146;
+    --ui-color-gray-100: #17191c;
 
     --ui-color-primary-700: #33c7ff;
     --ui-color-primary-500: #00aef0;
